Fix z-index of modals.

--- a/css/style.css
+++ b/css/style.css
@@ -1938,7 +1938,7 @@ footer p {
 .modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
- z-index: 1; /* Sit on top */
+ z-index: 10; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
